--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
+    "react": "",
+    "knockout": "",
     "angular": "~1.4.1",
     "openpgp": "~1.2.0",
     "less": "",
