--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,8 @@
     "https://ajax.googleapis.com/"
   ],
 
-  "author": "Citizen 9"
+  "author": "Stefan G."
+
+  //"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';"
 
 }
