--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,22 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_icon": "icon.png"
+    //"default_popup": "popup.html"
   },
-  "permissions": [
-    "storage",
-    "activeTab",
-    "https://ajax.googleapis.com/"
+
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+
+  "permissions": [ "storage", "activeTab", "<all_urls>" ],
+
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": [ "content.js"]
+    }
   ],
 
   "author": "Stefan G."
