--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.14.1",
     "config": "^1.16.0",
     "express": "^4.13.3",
+    "log4js": "^0.6.27",
     "mongoskin": "^2.0.3"
   },
   "devDependencies": {
