--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -13,7 +13,7 @@
 
   "background": {
     "scripts": ["background.js"],
-    "persistent": false
+    "persistent": true
   },
 
   "permissions": [ "storage", "activeTab", "<all_urls>" ],
