Add a content listener

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -6,27 +6,27 @@
   "description": "This extension allows you to use PGP to encrypt and decrypt text in your browser. It will automatically recognize encrypted text and allow you to decrypt it with a click of the mouse. You will be able to send encrypted text anywhere. That means email, social networks, insta-whatevers, you name it",
   "version": "1.0",
 
+  /*
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+  */
 
   "background": {
     "scripts": ["background.js"],
-    "persistent": true
+    "persistent": true    // TODO
   },
 
-  "permissions": [ "storage", "activeTab", "<all_urls>" ],
+  "permissions": [ "storage", "contextMenus", "activeTab", "<all_urls>" ],
 
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": [ "bower_components/jquery/dist/jquery.min.js", "content.js"]
+      "js": [ "bower_components/jquery/dist/jquery.min.js", "content.js"],
+      "run_at": "document_end"
     }
   ],
 
   "author": "Stefan G."
-
-  //"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';"
-
 }
