--- a/api/Makefile
+++ b/api/Makefile
@@ -1,12 +1,21 @@
 NODE=$(shell which node)
 APP=server.js
 MOCHA=$(shell which mocha)
+NPM=$(shell which npm)
 
 help:
 	@echo "Available targets:"
+	@echo "install     - install all modules"
+	@echo "clean       - remove all installed modules"
 	@echo "start       - run application in development mode"
 	@echo "deploy      - run application in production mode"
 	@echo "test        - run all test"
+
+install:
+	$(NPM) install
+
+clean:
+	rm -rf node_modules/
 
 start:
 	$(NODE) $(APP)
