--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -23,7 +23,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": [ "bower_components/jquery/dist/jquery.min.js", "content.js"],
+      "js": ["content.js"],
       "run_at": "document_end"
     }
   ],
