--- a/play/Makefile
+++ b/play/Makefile
@@ -6,7 +6,9 @@ help:
 	@echo "Available targets:"
 	@echo "install    - install all bower and npm deps"
 	@echo "clean      - remove all bower and npm modules"
+	@echo "build      - build all JS files"
 	@echo "start      - start the server"
+
 
 install:
 	$(NPM) install
@@ -14,6 +16,9 @@ install:
 
 clean:
 	rm -rf bower_components/ node_modules/
+
+build:
+	coffee -c js/
 
 start:
 	$(NODE) server.js
