Add install to Makefile

--- a/chrome/Makefile
+++ b/chrome/Makefile
@@ -1,6 +1,10 @@
 help:
 	@echo "Available targets:"
 	@echo "build           build all js files"
+	@echo "install         install all dependencies"
 
 build:
 	coffee -c ./
+
+install:
+	bower install
