--- a/chrome/bower.json
+++ b/chrome/bower.json
@@ -16,11 +16,12 @@
   ],
   "dependencies": {
     "openpgp": "~1.2.0",
-    "rivets": "~0.8.1"
+    "rivets": "~0.8.1",
+    "jquery": "~2.1.4",
+    "pathjs": "*"
   },
   "devDependencies": {
     "less": "~2.5.3",
-    "mocha": "~2.3.3",
-    "jquery": "~2.1.4"
+    "mocha": "~2.3.3"
   }
 }
