--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,7 @@ chrome/typings
 node_modules
 bower_components
 .module_cache
-private.txt
-public.txt
+
 chrome/*.js
 chrome/src/*.js
 chrome/src/modules/*.js
@@ -39,6 +38,7 @@ chrome/src/modules/settings/*.js
 chrome/src/modules/store/*.js
 chrome/src/admin/*.js
 chrome/src/admin/articles/*.js
+chrome/test_keys
 api/*.js
 api/t/*.js
 play/js/*.js
