--- a/chrome/Makefile
+++ b/chrome/Makefile
@@ -11,6 +11,7 @@ admin:
 		src/admin/articles/private_key_remove.ts \
 		src/admin/articles/private_key_view.ts \
 		src/admin/articles/public_key_import.ts \
+		src/admin/articles/public_key_list.ts \
 		src/admin/run.ts
 
 install:
