Update tests package and Makefile

--- a/chrome/tests/Makefile
+++ b/chrome/tests/Makefile
@@ -2,15 +2,17 @@ SOURCE=../src/modules
 TARGET=compiled
 
 help:
-	@echo "Available targets:"
-	@echo "-----------------------------------------------"
+	@echo "Targets"
+	@echo "==============================================="
 	@echo "build                  build all typescript libs"
 	@echo "install                install all dependencies"
+	@echo "test                   run all tests"
 
 install:
 	npm install
 
 build:
+	coffee -c t/ lib/
 	tsc --out $(TARGET)/store.js \
 		$(SOURCE)/store/LocalStore.ts
 
