Keystore LocalStore tests done

--- a/chrome/Makefile
+++ b/chrome/Makefile
@@ -2,6 +2,8 @@ help:
 	@echo "Available targets:"
 	@echo "install                 install all dependencies"
 	@echo "admin                   compile all admin files"
+	@echo "compile                 compile all coffee files"
+	@echo "build                   compile all files"
 
 admin:
 	tsc --out src/admin.js \
@@ -13,6 +15,11 @@ admin:
 		src/admin/articles/public_key_import.ts \
 		src/admin/articles/public_key_list.ts \
 		src/admin/run.ts
+
+compile:
+	coffee -c ./ unittests/
+
+build: admin compile
 
 install:
 	bower install
