--- a/chrome/bower.json
+++ b/chrome/bower.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "less": "~2.5.3",
-    "mocha": "~2.3.4"
+    "mocha": "~2.3.4",
+    "expect": "~0.3.1"
   }
 }
