--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -29,7 +29,8 @@
   ],
 
   "web_accessible_resources": [
-    "iframe.html"
+    "iframe.html",
+    "images/padlock.png"
   ],
 
   "author": "Stefan G."
