--- a/chrome/Makefile
+++ b/chrome/Makefile
@@ -7,6 +7,7 @@ help:
 	@echo "coffee                  compile all coffee files"
 	@echo "admin                   compile all admin files"
 	@echo "iframe                  compile all iframe files"
+	@echo "content                 compile all content files"
 	@echo "build                   build all"
 
 #------------------------------------------------------------------
@@ -43,8 +44,10 @@ admin:
 		src/admin/run.ts
 
 iframe:
-	tsc --out src/iframe.js \
-		src/iframe.ts
+	tsc --out src/iframe.js src/iframe.ts
 
-build: modules coffee admin iframe
+content:
+	tsc --out src/content.js src/content.ts
+
+build: modules coffee admin iframe content
 
