--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -12,6 +12,11 @@
     "persistent": false
   },
 
+  "browser_action": {
+    "default_icon": "images/padlock.png",
+    "default_popup": "iframe.html"
+  },
+
   "permissions": [
     "storage",
     "contextMenus",
