--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -13,7 +13,7 @@
         "src/modules.js",
         "src/background.js"
     ],
-    "persistent": false
+    "persistent": true
   },
 
   "browser_action": {
