--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -13,7 +13,7 @@
         "src/modules.js",
         "src/background.js"
     ],
-    "persistent": true
+    "persistent": false
   },
 
   "browser_action": {
@@ -30,7 +30,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": [ "src/modules.js", "src/content.js" ],
+      "js": [ "src/content.js" ],
       "run_at": "document_end",
       "all_frames": true
     }
