--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -31,9 +31,14 @@
     {
       "matches": ["<all_urls>"],
       "js": [ "src/content.js" ],
+      "css": ["css/content.css"],
       "run_at": "document_end",
       "all_frames": true
     }
+  ],
+
+  "web_accessible_resources": [
+      "images/*.png"
   ],
 
   "author": "Stefan G."
