Add public key done

--- a/chrome/Makefile
+++ b/chrome/Makefile
@@ -57,5 +57,5 @@ less:
 	lessc css/browser.less css/browser.css
 	lessc css/content.less css/content.css
 
-build: modules coffee admin browser content background
+build: modules coffee admin browser content background less
 
