--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -17,7 +17,10 @@
   },
 
   "browser_action": {
-    "default_icon": "images/mail.png",
+    "default_icon": {
+        "19": "images/browser24.png",
+        "38": "images/browser48.png"
+    },
     "default_popup": "browser.html"
   },
 
