--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -16,6 +16,12 @@
     "persistent": true
   },
 
+  "icons": {
+      "19": "images/browser24.png",
+      "38": "images/browser48.png",
+      "128": "images/browser128.png"
+  },
+
   "browser_action": {
     "default_icon": {
         "19": "images/browser24.png",
