--- a/chrome/Makefile
+++ b/chrome/Makefile
@@ -12,6 +12,8 @@ help:
 	@echo "less                    compile all less files"
 	@echo "build                   build all"
 	@echo "dist                    make a distribution"
+	@echo "dist-clean              cleanup the distribution"
+	@echo "build-dist              build and make dist"
 
 #------------------------------------------------------------------
 
@@ -65,12 +67,17 @@ dist:
 	mkdir -pv dist/{src,css,fonts,lib}
 	cp src/*.js dist/src
 	cp css/*.css dist/css
-	cp settings.html dist/
-	cp browser.html dist/
-	cp -r fonts dist/
-	cp -r images dist/
-	cp manifest.js dist/
+	cp -r src/templates dist/src
+	cp -r fonts dist
+	cp -r images dist
+	cat browser.html | sed 's/\.\/bower_components\///' | sed 's/rivets\/dist/lib/' | sed 's/openpgp\/dist/lib/' | sed 's/pathjs/lib/' > dist/browser.html
+	cat settings.html | sed 's/\.\/bower_components\///' | sed 's/rivets\/dist/lib/' | sed 's/openpgp\/dist/lib/' | sed 's/pathjs/lib/' > dist/settings.html
+	cat manifest.json | sed 's/bower_components\/openpgp\/dist/lib/' > dist/manifest.json
 	cp bower_components/pathjs/path.min.js dist/lib
 	cp bower_components/rivets/dist/rivets.bundled.min.js dist/lib
 	cp bower_components/openpgp/dist/openpgp.min.js dist/lib
 	
+dist-clean:
+	rm -rfv dist
+
+build-dist: dist-clean build dist
