--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -42,7 +42,7 @@
       "matches": ["<all_urls>"],
       "js": [ "src/content.js" ],
       "css": ["css/content.css"],
-      "run_at": "document_end",
+      "run_at": "document_idle",
       "all_frames": true
     }
   ],
