--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -4,7 +4,7 @@
   "name": "Short Link Privacy",
   "short_name": "SLP",
   "description": "Browser to browser PGP encryption via short links.",
-  "version": "1.0",
+  "version": "0.9.2",
   "options_page": "settings.html",
 
   "background": {
@@ -17,6 +17,7 @@
   },
 
   "icons": {
+      "16": "images/browser16.png",
       "19": "images/browser24.png",
       "38": "images/browser48.png",
       "128": "images/browser128.png"
@@ -34,6 +35,7 @@
   "permissions": [
     "storage",
     "activeTab",
+    "contextMenus",
     "<all_urls>"
   ],
 
