--- a/chrome/bower.json
+++ b/chrome/bower.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "less": "~2.5.3",
     "mocha": "~2.3.4",
-    "expect": "~0.3.1"
+    "expect": "~0.3.1",
+    "moment": "~2.11.2",
+    "assert": "~0.1.0"
   }
 }
