--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,6 +1,7 @@
 {
   "manifest_version": 2,
   "default_locale": "en",
+  "minimum_chrome_version": "45",
 
   "name": "__MSG_extName__",
   "short_name": "SLP",
