--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -40,7 +40,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": [ "src/content.js" ],
+      "js": [ "src/modlite.js", "src/content.js" ],
       "css": ["css/content.css"],
       "run_at": "document_idle",
       "all_frames": true
