--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -31,8 +31,8 @@
     "storage",
     "activeTab",
     "contextMenus",
-    "http://slp.li/",
-    "https://www.google-analytics.com/"
+    "tabs",
+    "<all_urls>"
   ],
 
   "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
