Consolidate typings into fewer lines

--- a/chrome/Makefile
+++ b/chrome/Makefile
@@ -36,6 +36,7 @@ clean:
 # TODO: add a header file
 modules:
 	tsc --out src/modules.js --declaration \
+		src/modules/typings.ts \
 		src/modules/config.ts \
 		src/modules/interfaces.ts \
 		src/modules/keys.ts \
@@ -51,6 +52,7 @@ modules:
 		src/modules/storage/PrivateKey/Local.ts \
 		src/modules/storage/PrivateKey.ts
 	tsc --out src/modlite.js \
+		src/modules/typings.ts \
 		src/modules/url.ts
 
 
