Update dist mechanics

--- a/chrome/Makefile
+++ b/chrome/Makefile
@@ -1,6 +1,3 @@
-COMPRESS=java -jar yuicompressor-2.4.8.jar
-VERSION=$(shell cat manifest.json | perl -MJSON -E 'my @a=<>;print from_json(join("",@a))->{version}')
-UNAME=$(shell uname)
 
 help:
 	@echo "Available targets:"
@@ -59,7 +56,7 @@ modules:
 #------------------------------------------------------------------
 
 tests:
-	find ./unittests -name "*.ts" -print -exec tsc {} \;
+	tsc -p unittests
 
 admin:
 	tsc --out src/admin.js \
@@ -89,26 +86,7 @@ less:
 build: modules tests admin browser content background less
 
 dist:
-	mkdir -pv dist/{src,css,fonts,lib}
-	$(COMPRESS) src/browser.js -o dist/src/browser.js
-	$(COMPRESS) src/background.js -o dist/src/background.js
-	$(COMPRESS) src/content.js -o dist/src/content.js
-	$(COMPRESS) src/admin.js -o dist/src/admin.js
-	$(COMPRESS) src/modules.js -o dist/src/modules.js
-	$(COMPRESS) src/modlite.js -o dist/src/modlite.js
-	cp css/*.css dist/css
-	cp -r src/templates dist/src
-	cp -r fonts dist
-	cp -r images dist
-	cp -r _locales dist
-	cp ../ShortLinkPrivacy.pem dist/key.pem
-	cat browser.html | sed 's/\.\/bower_components\///' | sed 's/rivets\/dist/lib/' | sed 's/openpgp\/dist/lib/' | sed 's/pathjs/lib/' > dist/browser.html
-	cat manifest.json | sed 's/bower_components\/openpgp\/dist/lib/' > dist/manifest.json
-	cp bower_components/pathjs/path.min.js dist/lib
-	cp bower_components/rivets/dist/rivets.bundled.min.js dist/lib
-	cp bower_components/openpgp/dist/openpgp.min.js dist/lib
-	zip -r ShortLinkPrivacy-$(VERSION).zip dist/*
-	echo "Produced ShortLinkPrivacy-$(VERSION).zip"
+	bin/build
 
 dist-clean:
 	rm -rfv dist
